--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "@types/react": "^17.0.45",
         "@types/react-dom": "^17.0.17",
         "babel-loader": "^8.2.5",
+        "copy-webpack-plugin": "^11.0.0",
         "css-loader": "^6.7.1",
         "html-webpack-plugin": "^5.5.0",
         "style-loader": "^3.3.1",
